Fixed Body Height on Mobile

--- a/css/main.css
+++ b/css/main.css
@@ -28,10 +28,6 @@ html {
 		margin: 0 auto;
 	}
 
-	.content-body {
-		height: calc(100VH - 228px);
-	}
-
 	.logo {
 		width: 60px;
 	}
